MaxPermSize has been removed